--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,18 +19,22 @@ annotation = "1.6.0"
 constraintlayout = "2.1.4"
 lifecycleLivedataKtx = "2.7.0"
 lifecycleViewmodelKtx = "2.7.0"
+materialIconsExtended = "2023.08.00"
 navigationCompose = "2.8.0-alpha04"
 navigationComposeVersion = "2.8.0-alpha05"
 retrofit = "2.9.0"
 converterGson = "2.9.0"
 kotlinAndroidxComposeVersion = "3.5.3"
 kotlinxCorotinesAndroid = "1.7.3"
+material3Android = "1.2.1"
+activity = "1.8.0"
 
 
 
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-navigation-compose-v280alpha05 = { module = "androidx.navigation:navigation-compose", version.ref = "navigationComposeVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -61,6 +65,8 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 insert-koin-koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "kotlinAndroidxComposeVersion" }
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCorotinesAndroid" }
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 
 
 
