--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.quiz.create.CreateQuizActivity"
-            android:exported="false" />
+            android:name=".ui.quiz.create.QuizConstructorActivity"
+            android:exported="false"
+            android:theme="@style/Theme.QuizMarket"/>
         <activity
             android:name=".ui.quiz.passing.QuizPassingActivity"
             android:exported="false"
