--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:exported="false"
             android:theme="@style/Theme.QuizMarket" />
         <activity
-            android:name=".ui.аuthentication.login.LoginActivity"
+            android:name=".ui.auth.LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.QuizMarket">
@@ -40,7 +40,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.аuthentication.registration.RegistrationActivity"
+            android:name=".ui.auth.RegistrationActivity"
             android:exported="true"
             android:theme="@style/Theme.QuizMarket" />
         <activity
